--- a/test.html
+++ b/test.html
@@ -90,11 +90,11 @@ div.tooltip {
 
 
 
-<script src="js/d3.min.js"></script>
+<script src="d3.min.js"></script>
 
-<script src="js/queue.min.js"></script>
+<script src="queue.min.js"></script>
 
-<script src="js/topojson.v1.min.js"></script>
+<script src="topojson.v1.min.js"></script>
 
 <script>
 
@@ -102,9 +102,9 @@ div.tooltip {
 
 ////////////////////////////////////    VARIABLES   ////////////////////////////////////////////
 
-var mapFile = "data/world-110m.json";
+var mapFile = "world-110m.json";
 
-var dataFile = "data/gdp2012.tsv";
+var dataFile = "gdp2012.tsv";
 
 var dataTextLabel = "GDP per capita (USD): ";
 
