--- a/test.html
+++ b/test.html
@@ -56,7 +56,7 @@ div.tooltip {
 
 ////////////////////////////////////    VARIABLES   ////////////////////////////////////////////
 
-var mapFile = "world-110m.json";
+var mapFile = "world-topo.json";
 var dataFile = "gdp2012.tsv";
 var dataTextLabel = "GDP per capita (USD): ";
 var sigNumber = 6;
