--- a/test.html
+++ b/test.html
@@ -1,200 +1,168 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<title>Duc's D3 Geo World Map Template</title>
 <style>
 
-
-
-.country {
+  .names {
   fill: none;
   stroke: #fff;
-  stroke-width: .3px;
-  stroke-opacity: .9;
-}
+  stroke-linejoin: round;
+  }
 
-.country:hover{
-  stroke: #fff;
-  stroke-width: 1px;
-  opacity: 0.8;
-}
+    /* Tooltip CSS */
+    .d3-tip {
+    line-height: 1.5;
+    font-weight: 400;
+    font-family:"avenir next", Arial, sans-serif;
+    padding: 6px;
+    background: rgba(0, 0, 0, 0.6);
+    color: #FFA500;
+    border-radius: 1px;
+    pointer-events: none;
+    }
 
-/*<!-- "properties":{"name":"Aruba","color:"""} -->*/
+    /* Creates a small triangle extender for the tooltip */
+    .d3-tip:after {      
+      box-sizing: border-box;
+      display: inline;
+      font-size: 8px;
+      width: 100%;
+      line-height: 1.5;
+      color: rgba(0, 0, 0, 0.6);
+      position: absolute;
+      pointer-events: none;
+      
+    }
 
-#container {
-  margin:10px 10%;
-  padding:15px;
-  border:1px solid #d0d0d0;
-  border-radius: 5px;
-  height:100%;
-}
+    /* Northward tooltips */
+    .d3-tip.n:after {
+      content: "\25BC";
+      margin: -1px 0 0 0;
+      top: 100%;
+      left: 0;
+      text-align: center;
+    }
 
-.hidden {
-  display: none;
-}
+    /* Eastward tooltips */
+    .d3-tip.e:after {
+      content: "\25C0";
+      margin: -4px 0 0 0;
+      top: 50%;
+      left: -8px;
+    }
 
-div.tooltip {
-  color: #222;
-  background: #fff;
-  padding: .2em;
-  text-shadow: #f5f5f5 0 1px 0;
-  border-radius: 3px;
-  box-shadow: 0px 0px 2px 0px #a6a6a6;
-  opacity: 0.8;
-  position: absolute;
-}
+    /* Southward tooltips */
+    .d3-tip.s:after {
+      content: "\25B2";
+      margin: 0 0 1px 0;
+      top: -8px;
+      left: 0;
+      text-align: center;
+    }
+
+    /* Westward tooltips */
+    .d3-tip.w:after {
+      content: "\25B6";
+      margin: -4px 0 0 -1px;
+      top: 50%;
+      left: 100%;
+    }
+
+/*    text{
+      pointer-events:none;
+    }*/
+
+    .details{
+      color:white;
+    }
+
 </style>
-</head>
 <body>
-  <div id="container"></div>
-
-<script src="https://d3js.org/d3.v3.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/queue-async/1.0.7/queue.min.js"></script>
-<script src="topojson.v1.min.js"></script>
+<script src="https://d3js.org/d3.v4.min.js"></script>
+<script src="https://d3js.org/queue.v1.min.js"></script>
+<script src="https://d3js.org/topojson.v1.min.js"></script>
+<script src="d3-tip.js"></script>
 <script>
+var format = d3.format(",");
 
+// Set tooltips
+var tip = d3.tip()
+            .attr('class', 'd3-tip')
+            .offset([-10, 0])
+            .html(function(d) {
+              return "<strong>Country: </strong><span class='details'>" + d.properties.name + "<br></span>" + "<strong>Population: </strong><span class='details'>" + format(d.population) +"</span>";
+            })
 
+var margin = {top: 0, right: 0, bottom: 0, left: 0},
+            width = 960 - margin.left - margin.right,
+            height = 500 - margin.top - margin.bottom;
 
-////////////////////////////////////    VARIABLES   ////////////////////////////////////////////
+var color = d3.scaleThreshold()
+    .domain([10000,100000,500000,1000000,5000000,10000000,50000000,100000000,500000000,1500000000])
+    .range(["rgb(247,251,255)", "rgb(222,235,247)", "rgb(198,219,239)", "rgb(158,202,225)", "rgb(107,174,214)", "rgb(66,146,198)","rgb(33,113,181)","rgb(8,81,156)","rgb(8,48,107)","rgb(3,19,43)"]);
 
-var mapFile = "world-topo.json";
-var dataFile = "gdp2012.tsv";
-var dataTextLabel = "GDP per capita (USD): ";
-var sigNumber = 6;
-var colorPalette = 	["rgb(198,219,239)", "rgb(158,202,225)","rgb(107,174,214)","rgb(66,146,198)","rgb(33,113,181)","rgb(8,81,156)","rgb(8,48,107)"]
+var path = d3.geoPath();
 
-//["rgb(247,251,255)", "rgb(222,235,247)", "rgb(198,219,239)", "rgb(158,202,225)", "rgb(107,174,214)", "rgb(66,146,198)", "rgb(33,113,181)", "rgb(8,81,156)", "rgb(8,48,107)"]
+var svg = d3.select("body")
+            .append("svg")
+            .attr("width", width)
+            .attr("height", height)
+            .append('g')
+            .attr('class', 'map');
 
-d3.select(window).on("resize", throttle);
+var projection = d3.geoMercator()
+                   .scale(130)
+                  .translate( [width / 2, height / 1.5]);
 
-var zoom = d3.behavior.zoom()
-    .scaleExtent([1, 8])
-    .on("zoom", move);
+var path = d3.geoPath().projection(projection);
 
-var width = document.getElementById('container').offsetWidth - 20;
-var height = width / 2;
-var topo,projection,path,svg,g;
-var tooltip = d3.select("#container").append("div").attr("class", "tooltip hidden");
-setup(width,height);
-
-var color = d3.scale.quantize()
-    .range(colorPalette);
-
-// defer load of json and data
+svg.call(tip);
 
 queue()
-   .defer(d3.json, mapFile)
-   .defer(d3.tsv, dataFile, function(d) {
-	   val = +d.value;
-	   val = val.toPrecision(sigNumber)
-       dictValue[d.id] = val;
-       dictName[d.id] = "" +d.name;
-   })
-   .await(ready);
+    .defer(d3.json, "world_countries.json")
+    .defer(d3.tsv, "world_population.tsv")
+    .await(ready);
 
-var dictValue = {};
-var dictName = {};
+function ready(error, data, population) {
+  var populationById = {};
 
-function setup(width,height){
-  var projection = d3.geo.mercator()
+  population.forEach(function(d) { populationById[d.id] = +d.population; });
+  data.features.forEach(function(d) { d.population = populationById[d.id] });
 
-  //var projection = d3.geo.conicEqualArea()
-
-    .translate([-55, 50])
-    .scale(width / 2.2 / Math.PI)
-    .precision(.1);
-
-  path = d3.geo.path()
-      .projection(projection);
-
-  svg = d3.select("#container").append("svg")
-      .attr("width", width)
-      .attr("height", height)
-      .append("g")
-      .attr("transform", "translate(" + width / 2 + "," + height / 2 + ")")
-      .call(zoom);
-  g = svg.append("g");
-
-}
-
-
-
-function ready(error, world) {
-    var countries = topojson.feature(world, world.objects.countries).features;
-    topo = countries;
-    draw(topo);
-}
-
-function draw(topo) {
-    color.domain([
-        d3.min(d3.values(dictValue)),
-        d3.max(d3.values(dictValue))
-    ]);
-
-  var country = g.selectAll(".country").data(topo);
-
-  country.enter().insert("path")
-      .attr("class", "country")
+  svg.append("g")
+      .attr("class", "countries")
+    .selectAll("path")
+      .data(data.features)
+    .enter().append("path")
       .attr("d", path)
-      .attr("id", function(d,i) { return d.id; })
-      .attr("title", function(d,i) { return dictName[d.id]; })
-      .style("fill", function(d,i) {
-          var value = dictValue[d.id];
-          if (value) {
-              return color(value);
-          } else {
-              return "#ccc";
-          }
+      .style("fill", function(d) { return color(populationById[d.id]); })
+      .style('stroke', 'white')
+      .style('stroke-width', 1.5)
+      .style("opacity",0.8)
+      // tooltips
+        .style("stroke","white")
+        .style('stroke-width', 0.3)
+        .on('mouseover',function(d){
+          tip.show(d);
 
-      });
+          d3.select(this)
+            .style("opacity", 1)
+            .style("stroke","white")
+            .style("stroke-width",3);
+        })
+        .on('mouseout', function(d){
+          tip.hide(d);
 
+          d3.select(this)
+            .style("opacity", 0.8)
+            .style("stroke","white")
+            .style("stroke-width",0.3);
+        });
 
-
-  //ofsets plus width/height of transform, plsu 20 px of padding, plus 20 extra for tooltip offset off mouse
-  var offsetL = document.getElementById('container').offsetLeft+(width/2)+20;
-  var offsetT = document.getElementById('container').offsetTop+(height/2)+20;
-
-  //tooltips
-  country
-    .on("mousemove", function(d,i) {
-      var mouse = d3.mouse(svg.node()).map( function(d) { return parseInt(d); } );
-        tooltip
-          .classed("hidden", false)
-          //.attr("style", "left:"+(mouse[0]+offsetL)+"px;top:"+(mouse[1]+offsetT)+"px")
-          .html(dictName[d.id] + "<br><br>" + dataTextLabel + dictValue[d.id])
-      })
-      .on("mouseout",  function(d,i) {
-        tooltip.classed("hidden", true)
-      });
-
-}
-
-
-function redraw() {
-  width = document.getElementById('container').offsetWidth-60;
-  height = width / 2;
-  d3.select('svg').remove();
-  setup(width,height);
-  draw(topo);
-}
-function move() {
-  var t = d3.event.translate;
-  var s = d3.event.scale;
-  var h = height / 3;
-
-  t[0] = Math.min(width / 2 * (s - 1), Math.max(width / 2 * (1 - s), t[0]));
-  t[1] = Math.min(height / 2 * (s - 1) + h * s, Math.max(height / 2 * (1 - s) - h * s, t[1]));
-
-  zoom.translate(t);
-  g.style("stroke-width", 1 / s).attr("transform", "translate(" + t + ")scale(" + s + ")");
-
-}
-
-var throttleTimer;
-function throttle() {
-  window.clearTimeout(throttleTimer);
-    throttleTimer = window.setTimeout(function() {
-      redraw();
-    }, 200);
+  svg.append("path")
+      .datum(topojson.mesh(data.features, function(a, b) { return a.id !== b.id; }))
+       // .datum(topojson.mesh(data.features, function(a, b) { return a !== b; }))
+      .attr("class", "names")
+      .attr("d", path);
 }
 
 </script>
