--- a/test.html
+++ b/test.html
@@ -119,7 +119,7 @@ svg.call(tip);
 
 queue()
     .defer(d3.json, "world_countries.json")
-    .defer(d3.tsv, "world_population.tsv")
+    .defer(d3.tsv, "world.tsv")
     .await(ready);
 
 function ready(error, data, population) {
